# SupplyChainManagement_PredictionModel

./: pyproject.toml
data/raw/: .gitignore  SupplyChain_Dataset.csv.dvc
expirements/: EDA.ipynb
